--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -55,6 +56,10 @@
             <div id="project-list">
                 <!-- JavaScript will populate this -->
             </div>
+            <video controls width="300">
+                <source src = "demos/StarshiftDemo.mp4" type="video">
+                Your browser does not support the video tag.
+            </video>
         </section>
 
         <!-- Contact Section -->
@@ -67,7 +72,7 @@
             </div>
         </section>
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/marked@1.2.9/marked.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
